eliminated N+1 query problem and optimised the latency using batched queries